# crisprzip

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING  CONTRIBUTING.md  Getting started.ipynb  LICENSE  Loading_data_running_SA.ipynb  README.md  WAIVER  fit_data.py.e417665  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: index.doctree
.doctrees/apidocs/: crisprzip.coarsegrain.doctree  crisprzip.doctree  crisprzip.kinetics.doctree  crisprzip.matrix_expon.doctree  crisprzip.nucleic_acid.doctree  crisprzip.plotting.doctree  modules.doctree
.doctrees/devdocs/: changelog.doctree  code_of_conduct.doctree  contributing.doctree
.doctrees/userdocs/: about.doctree  code_structure.doctree  gettingstarted.doctree  tutorial.doctree
.github/workflows/: compatibility-test.yml  deploy-sphinx.yml  test_pipeline.yml
_sources/apidocs/: crisprzip.coarsegrain.rst.txt  crisprzip.kinetics.rst.txt  crisprzip.matrix_expon.rst.txt  crisprzip.nucleic_acid.rst.txt  crisprzip.plotting.rst.txt  crisprzip.rst.txt
_sources/devdocs/: changelog.md.txt  code_of_conduct.md.txt  contributing.md.txt
_sources/userdocs/: about.md.txt  gettingstarted.md.txt  tutorial.ipynb.txt
apidocs/: crisprzip.coarsegrain.html  crisprzip.html  crisprzip.kinetics.html  crisprzip.matrix_expon.html  crisprzip.nucleic_acid.html  crisprzip.plotting.html  modules.html
crisprzipper/: dummy_script.py  fit_data_custom_sa.py  fit_data_da.py  fit_data_da_abserr.py  fit_data_da_fixed_rates.py  fit_data_varqv.py  fit_data_vartemp.py  make_video.py
crisprzipper/model/: analysis.py  data.py  experiment_simulations.py  fit_analysis.py  fitting.py  parameter_vector.py  plotting.py  tools.py
czmodel/: coarsegrain.py  kinetics.py  matrix_expon.py  new_module.py  nucleic_acid.py  plotting.py
data/landscapes/: average_params.json  average_params_legacy.json  sequence_params.json
data/nucleicacid_params/: alkan2018.json
devdocs/: changelog.html  code_of_conduct.html  contributing.html
docs/: build_docs.sh  conf.py  index.rst
docs/_build/.doctrees/apidocs/czmodel/: czmodel.coarsegrain.doctree  czmodel.doctree  czmodel.kinetics.doctree  czmodel.matrix_expon.doctree  czmodel.nucleic_acid.doctree
docs/apidocs/: crisprzip.coarsegrain.rst  crisprzip.kinetics.rst  crisprzip.matrix_expon.rst  crisprzip.nucleic_acid.rst  crisprzip.plotting.rst  crisprzip.rst  index.rst
docs/apidocs/czmodel/: czmodel.coarsegrain.rst  czmodel.kinetics.rst  czmodel.matrix_expon.rst  czmodel.nucleic_acid.rst  czmodel.plotting.rst  czmodel.rst
docs/devdocs/: code_of_conduct.md
docs/jupyter_execute/jupyter_execute/jupyter_execute/jupyter_execute/tutorials/: basic_tool.ipynb
docs/jupyter_execute/jupyter_execute/tutorials/: basic_tool.ipynb
docs/jupyter_execute/userdocs/: tutorial.ipynb
docs/source/: crisprzip.rst  czmodel.rst  modules.rst
docs/tutorials/: basic_tool.ipynb
docs/userdocs/: about.md  code_structure.md  gettingstarted.md  tutorial.ipynb
examples/: bare_protein_params.json  basic_tool.ipynb  minimal_example.ipynb  tutorial.ipynb
model/: CHAMP.py  CRISPRclass.py  HiTS_FLIP.py  NucleaSeq.py  __init__.py  active_Cas.py  aggregate_landscapes.py  coarsegrain.py  dead_Cas.py  fit_analysis.py  fit_optimizer.py  free_energy_landscape.py  hybridization_kinetics.py  kinetic_parameters.py  kinetics.py  nucleic_acid.py  read_model_ID.py  sim_anneal.py  smFRET_HNH.py  training_set.py  utils.py
model/old/: analysis.py
model/old_modules/: data_importer.py
nearest_neighbor_energies/: alkan2018.json  santaluciahicks2004.json  turner2004.json
newdata/experimental/: complex.csv  dataset.csv  experiment.csv  guide.csv  measurement.csv  searcher.csv
newmodel/: analysis.py  data_importer.py  data_preprocessing.py  database_structure.drawio  experiment_simulations.py  experiments.py  hybridization_kinetics.py  nucleicacid.py  optimization_logging.py  parameter_estimation.py  sim_anneal.py  targetsearch.py  training_set.py
newmodel/old_modules/: data_preprocessing.py
run/: compare_opt_algorithm.py  dummy_script.py  fit_data.py  fit_data_custom_sa.py  fit_data_da.py  fit_data_da_abserr.py  fit_data_da_fixed_rates.py  fit_data_da_linfit.py  fit_data_varqv.py  fit_data_vartemp.py  job_setup.sh  make_video.py  opt_algorithm_sweep.txt  runner.sh  setup_queue.sh  test_ppn.py  test_solution.py  testrun.sh  user.config
run/cluster/: collect_results.sh  empty_user.config  runner.sh  setup_queue.sh  status_update.sh  user.config
src/crisprzip/: __init__.py  coarsegrain.py  kinetics.py  matrix_expon.py  nucleic_acid.py  plotting.py
src/crisprzip/landscape_params/: average_params.json  average_params_legacy.json  sequence_params.json
tests/cleavage_binding_prediction/: expected_output_avg.csv  expected_output_seq.csv  generate_expected_output.py  test_cleavage_binding_prediction.py
userdocs/: about.html  code_structure.html  gettingstarted.html  tutorial.html
