[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]

name = "crisprzip"
version = "1.1.1"
description = "A kinetic model of CRISPR-Cas target recognition."

readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
keywords = ["crispr-cas9", "crispr", "bioinformatics", "genome editing", "genetic engineering"]
authors = [
  {name = "HS Offerhaus", email = "hsofferhaus@gmail.com" }
]
maintainers = [
  {name = "HS Offerhaus", email = "hsofferhaus@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "matplotlib>=3.7",
  "numba>=0.55"
]

[project.optional-dependencies]
docs = [
  "sphinx>=1.3",
  "myst-nb>=1.1",
  "sphinx-rtd-theme>=3.0"
]
jupyter = [
  "jupyter>=1.0"
]
tests = [
  "pytest>=6.0",
  "pandas>=2.0"
]
distr = [
  "build",
  "twine"
]

[project.urls]
"Homepage" = "https://github.com/hiddeoff/crisprzip"
"Documentation" = "https://hiddeoff.github.io/crisprzip/"
"Source" = "https://github.com/hiddeoff/crisprzip"

[tool.setuptools.package-data]
"crisprzip.landscape_params" = ["*.json"]
"crisprzip.nucleicacid_params" = ["*.json"]
